syntax = "proto3";

package api;

option go_package = "github.com/ciaolink-game-platform/cgp-bing-module/api";

enum QQBetCell {
  RED = 0;
  RED_TWIN = 1;
  RED_QIU = 2;
  BLUE = 3;
  BLUE_TWIN = 4;
  BLUE_QIU = 5;
  DRAW = 6;
  QIU_QIU = 7;
  SIX_TWINS = 8;
}

enum QQHandType {
  NORMAL = 0;
  QIU = 1;
  SIX = 2;
  TWIN = 3;
}

message Domino {
  int32 top = 1;
  int32 bottom = 2;
  int32 total = 3;
}

message QQBet {
  string user_id = 1;
  int64 chips = 2;
  QQBetCell cell = 3;
}

// message from client to server indicate user placing bet
message QQPlayerBets {
  string user_id = 1;
  repeated QQBet bets = 2;
}

// endgame result for 1 player
// win_bets contains the bets in the cell that player win
// chip is amount of win chip, if it's negative then player lost that game
message QQPlayerBetResult {
  string user_id = 1;
  repeated QQBet win_bets = 2;
  int64 chip = 3;
}

// endgame result for all user playing in that game
message QQListPlayerBetResult {
  repeated QQPlayerBetResult results = 1;
}

// info of 1 hand
message Hand {
  repeated Domino dominos = 1;
  QQHandType type = 2;
}

// message from server to client when the game end
// red's and blue's hand
// win_cells is list of winning cells
message QQGameFinish {
  Hand red_hand = 1;
  Hand blue_hand = 2;
  QQBetCell win_cells = 3;
  QQListPlayerBetResult result = 4;
}

message QQHistoryHand {
  Hand red_hand = 1;
  Hand blue_hand = 2;
}

// game history of prev hands
message QQHistory {
  repeated QQHistoryHand hand_history = 1;
}

// amount and number of user placed bet in a cell
message QQDeskCellBet {
  QQBetCell cell = 1;
  int64 chips = 2;
  int32 n_user_bet = 3;
}

message QQDeskListCellBet {
  repeated QQDeskCellBet list_cell_bet = 1;
}


// message from server to client
// indicate changing in desk status
// - num of playing
// - acknowledge user bet -> update_user_bets=true
// - update total bet in each cell by all of the users -> update_cell_bets=true
// - update game history -> update_game_history=true
message QQUpdateDesk {
  int32 n_players = 1;
  bool update_user_bets = 2;
  bool update_cell_bets = 3;
  bool update_game_history = 4;
  repeated QQPlayerBets player_list_bet = 5;
  repeated QQDeskListCellBet list_cell_bet = 6;
  QQHistory history = 7;
}